# multimodal-ranker

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/: api.py  db.py  embedders.py  ingestor.py  searcher.py
tests/: debug_index.py  test_search.py
